Text selection regression (difficult to see) since 2.93 #92079

Closed
opened 2021-10-10 04:12:00 +02:00 by Campbell Barton · 9 comments

Since 2.93, text selection outline how displays dimmed, see screenshot:

  • Broken: 79425ed3267663ee482ee3ffcc542d86888103af
  • Worked: 2.93.4.

text_selection.png

Test file text_selection.blend

Since 2.93, text selection outline how displays dimmed, see screenshot: - Broken: `79425ed3267663ee482ee3ffcc542d86888103af` - Worked: 2.93.4. ![text_selection.png](https://archive.blender.org/developer/F10921741/text_selection.png) Test file [text_selection.blend](https://archive.blender.org/developer/F10921831/text_selection.blend)
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Owner

Marking high priority as it impacts visibility / usability.

Marking high priority as it impacts visibility / usability.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Bisecting says this issue is introduced in b9febb54a4

Bisecting says this issue is introduced in b9febb54a4

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Hans Goudey was assigned by Dalai Felinto 2021-11-02 17:14:15 +01:00

I think it odd to be related to that commit. But I will leave for Hans to investigate then.

I think it odd to be related to that commit. But I will leave for Hans to investigate then.

This issue was referenced by aa13c4b386

This issue was referenced by aa13c4b386b1311162e74378ad864a51b2f1b7af
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:58:50 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92079
No description provided.